--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .raleway-font {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
@@ -7,4 +11,67 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+}
+/* Shared Color */
+.color-primary{
+  color: #4E47FF;
+}
+
+/* Header Style */
+.header-setion{
+ background-image: url('../Assets/Hero-bg.png');
+ background-size: cover; 
+ background-repeat: no-repeat;
+ background-position: center; 
+ width: 100%; 
+ height: 750px;;
+}
+
+.nav-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 150px;
+    list-style: none;
+}
+.logo-class{
+  font-size: 34px;
+}
+.header-btn{
+  padding: 12px 30px;
+  font-weight: bold;
+  font-size: 16px;
+  background-color: #4E47FF;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.banner{
+   margin: 200px 130px 80px 130px;
+}
+
+.banner-content{
+  text-align: center;
+  align-items: center;
+  margin-top: 309px;
+}
+.banner-content h2{
+  font-weight: bold;
+  font-size: 65px;
+  color: #252432;
+  
+}
+
+.banner-button{
+  margin-top: 30px;
+  padding: 12px 30px;
+  font-weight: bold;
+  font-size: 16px;
+  background-color: #4E47FF;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
 }
